DTR-6052 Fix charity name caption wrapping (#48)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -99,3 +99,7 @@
         margin-bottom: 0
       }
     }
+
+.charity-name-caption {
+  overflow-wrap: break-word;
+}
